# Scrolling_shooter_in_c-

./: Bullet.cpp  Bullet.h  CMakeCache.txt  CMakeLists.txt  Enemy.cpp  Enemy.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  InputHandler.cpp  InputHandler.h  ObjectParamLoader.cpp  ObjectParamLoader.h  Player.cpp  Player.h  README.md  Randomizer.cpp  Randomizer.h  TextureManager.cpp  TextureManager.h  Vector2D.h  cpp_eksamen3_2022-04-23-011130.collapsed  hs.csv  main.cpp
csv/: hs.csv
src/Game/: Game.cpp  Game.h  States.cpp  States.h  TextureManager.cpp  TextureManager.h
src/GameObjects/: BG.cpp  BG.h  Enemy.cpp  Enemy.h  GameObject.cpp  GameObject.h  HealthBar.cpp  HealthBar.h  MenuObject.cpp  MenuObject.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  Renderable.cpp  Renderable.h  TextObject.cpp  TextObject.h  UIElement.cpp  UIElement.h  UI_Element.cpp  UI_Element.h
src/InputHandler/: InputHandler.cpp  InputHandler.h
src/States/: GameLoop.cpp  GameLoop.h  GameOver.cpp  GameOver.h  GameOverState.cpp  GameOverState.h  GameState.cpp  GameState.h  GameStateMachine.cpp  GameStateMachine.h  HighScoreState.cpp  HighScoreState.h  Menu.cpp  Menu.h  MenuState.cpp  MenuState.h  Playing.cpp  Playing.h  PlayingState.cpp  PlayingState.h  SplashState.cpp  SplashState.h
src/SupportClasses/: FileReader.cpp  FileReader.h  ObjectParamLoader.h  Randomizer.cpp  Randomizer.h  SoundLoader.cpp  SoundLoader.h  TextureManager.cpp  TextureManager.h  TimeKeeper.cpp  TimeKeeper.h  Vector2D.h
